# project_aur_controller

./: CMakeLists.txt  package.xml
config/: rov_ZED.yaml
launch/: aur_controller.launch  orbSlam.launch
rviz/: controller_demo.rviz
urdf/: basic_International_ROV.urdf
worlds/: empty_asphalt_plane.world  empty_sapct.world
